syntax = "proto3";

package wso2.discovery.config.enforcer;

import "wso2/discovery/config/enforcer/cert.proto";
import "wso2/discovery/config/enforcer/security.proto";
import "wso2/discovery/config/enforcer/am_credentials.proto";
import "wso2/discovery/config/enforcer/service.proto";
import "wso2/discovery/config/enforcer/jwt_generator.proto";
import "wso2/discovery/config/enforcer/jwt_issuer.proto";
import "wso2/discovery/config/enforcer/throttling.proto";
import "wso2/discovery/config/enforcer/cache.proto";
import "wso2/discovery/config/enforcer/analytics.proto";
import "wso2/discovery/config/enforcer/auth_header.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/config/enforcer;enforcer";
option java_package = "org.wso2.choreo.connect.discovery.config.enforcer";
option java_outer_classname = "ConfigProto";
option java_multiple_files = true;

// [#protodoc-title: Config]

// Enforcer config model
message Config {
    Security security = 1;

    CertStore keystore = 2;

    CertStore truststore = 3;

    Service authService = 5;

    AmCredentials apimCredentials = 6;

    JWTGenerator jwtGenerator = 7;

    Throttling throttling = 8;

    Cache cache = 9;

    JWTIssuer jwtIssuer = 10;

    Analytics analytics = 11;

    AuthHeader authHeader = 12;
}
